News UAT/force-app/main/default/objects/Survey__c/fields/IncludedIn__c.field-meta.xml
<CustomField>
    <fullName>IncludedIn__c</fullName>
    <description>As new items are developed, add the solutions here so we can specify where each survey should appear ie if this survey is only for scorecarding then only NVM Scorecards should be selected.</description>
    <label>Included In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NVM Scorecards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>