News UAT/force-app/main/default/objects/Survey__c/fields/MaxBonusScore__c.field-meta.xml
<CustomField>
    <fullName>MaxBonusScore__c</fullName>
    <label>Max Bonus Score</label>
    <summarizedField>Survey_Question__c.Max_Weight__c</summarizedField>
    <summaryFilterItems>
        <field>Survey_Question__c.SurveySection__c</field>
        <operation>equals</operation>
        <value>BONUS POINTS</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>