News UAT/force-app/main/default/objects/Survey__c/recordTypes/Agent_Survey.recordType-meta.xml
<RecordType>
    <fullName>Agent_Survey</fullName>
    <active>true</active>
    <label>Agent Survey</label>
</RecordType>