News UAT/force-app/main/default/objects/Survey__c/recordTypes/AgentScorecard.recordType-meta.xml
<RecordType>
    <fullName>AgentScorecard</fullName>
    <active>true</active>
    <label>Agent Scorecard</label>
</RecordType>