News UAT/force-app/main/default/objects/Survey__c/listViews/standard_view.listView-meta.xml
<ListView>
    <fullName>standard_view</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>standard view</label>
</ListView>